zebrad/tests/snapshots/z_getsubtreesbyindex_mainnet_orchard_585_1.snap
---
source: zebrad/tests/stateful/rpc.rs
expression: parsed
---
{
  "jsonrpc": "2.0",
  "id": "[id]",
  "result": {
    "pool": "orchard",
    "start_index": 585,
    "subtrees": [
      {
        "root": "43c86869520ada7a2cd0deeecf3650f337f90bd4328b16144b0a278ad9fdaa08",
        "end_height": 2000126
      }
    ]
  }
}
