zebrad/tests/snapshots/z_getsubtreesbyindex_mainnet_sapling_0_1.snap
---
source: zebrad/tests/stateful/rpc.rs
expression: parsed
---
{
  "jsonrpc": "2.0",
  "id": "[id]",
  "result": {
    "pool": "sapling",
    "start_index": 0,
    "subtrees": [
      {
        "root": "754bb593ea42d231a7ddf367640f09bbf59dc00f2c1d2003cc340e0c016b5b13",
        "end_height": 558822
      }
    ]
  }
}
